--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@derkoe/remix-azure-functions": "^1.7.2",
     "@remix-run/css-bundle": "^1.17.1",
     "@remix-run/node": "^1.17.1",
     "@remix-run/react": "^1.17.1",
@@ -17,6 +18,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@azure/functions": "^3.5.1",
+    "@azure/static-web-apps-cli": "^1.1.3",
     "@remix-run/dev": "^1.17.1",
     "@remix-run/eslint-config": "^1.17.1",
     "@types/react": "^18.0.35",
