--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@remix-run/eslint-config": "^1.17.1",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "azure-functions-core-tools": "^4.0.5198",
     "eslint": "^8.38.0",
     "typescript": "^5.0.4"
   },
